Objects with alpha maps cast wrong ray shadows in BI #48818

Closed
opened 2016-07-09 08:57:51 +02:00 by Alex · 4 comments

System Information
Intel Core i7, 8 Gb RAM, AMD Radeon HD 7700
Windows 7 x64

Blender Version
Broken: 2.77 1b45c52
Worked: 2.77a abf6f08

Short description of error
Tested 1b45c52 and while general problem with shadow placement seems to be solved, the next issue with upside-down shadows is still there.
Edit: I've made additional tests and found out that this problem is a lot bigger - it is reproducible with any object and any alpha map so this is not specific to particles. I have tried .png files and simple grayscale bitmaps with "RGB to Intensity" option and both seems to behave the same.

Exact steps for others to reproduce the error
You can use my test file - just open it and hit render.
Particle_object_artifacts1.blend
Upsidedown_shadows.png
You can also recreate it yourself using a following setup:

  1. Open Blender, add a simple Plane with UVs and assign a particle system to it.
  2. Set start and end frames to 1 and particle number to 10 so each one could cast a definite shadow.
  3. Switch particle type to Billboard and scale them to 10 so each billboard will be clearly visible. It is also possible to use custom objects as well.
  4. Apply base material and turn on "Receive Transparent" option. Add material and texture with alpha map and make particles use that material.
  5. Set any lamp that can cast ray shadows.
  6. Render your scene.

The most simple case can be set like this:

  1. Open Blender, create two simple planes with UVs.
  2. Rotate one of the planes 90 degrees so it will cast shadow on another plane.
  3. Apply material to horizontal plane and turn on "Receive Transparent" option.
  4. Apply material to vertical plane and set any kind of alpha map to it. You can use .png file with alpha or simple grayscale bitmap.
  5. Render your scene.
  • In 2.77a shadows will be placed as expected
  • In latest 2.77 shadows will be turned upside-down. Notice that in my example text is flipped in addition to being upside-down
  • Image Mapping -> Repeat and Checker produce upside-down shadow. Using Crop Minimum/Maximum produce wrong shadow
  • Image Mapping -> Clip and Clip Cube produce no shadow
  • Image Mapping -> Extend produce wrong shadow
**System Information** Intel Core i7, 8 Gb RAM, AMD Radeon HD 7700 Windows 7 x64 **Blender Version** Broken: 2.77 1b45c52 Worked: 2.77a abf6f08 **Short description of error** Tested 1b45c52 and while general problem with shadow placement seems to be solved, the next issue with upside-down shadows is still there. **Edit:** I've made additional tests and found out that this problem is a lot bigger - it is reproducible with any object and any alpha map so this is not specific to particles. I have tried .png files and simple grayscale bitmaps with "RGB to Intensity" option and both seems to behave the same. **Exact steps for others to reproduce the error** You can use my test file - just open it and hit render. [Particle_object_artifacts1.blend](https://archive.blender.org/developer/F320550/Particle_object_artifacts1.blend) ![Upsidedown_shadows.png](https://archive.blender.org/developer/F320548/Upsidedown_shadows.png) You can also recreate it yourself using a following setup: 1. Open Blender, add a simple Plane with UVs and assign a particle system to it. 2. Set start and end frames to 1 and particle number to 10 so each one could cast a definite shadow. 3. Switch particle type to Billboard and scale them to 10 so each billboard will be clearly visible. It is also possible to use custom objects as well. 4. Apply base material and turn on "Receive Transparent" option. Add material and texture with alpha map and make particles use that material. 5. Set any lamp that can cast ray shadows. 6. Render your scene. The most simple case can be set like this: 1. Open Blender, create two simple planes with UVs. 2. Rotate one of the planes 90 degrees so it will cast shadow on another plane. 3. Apply material to horizontal plane and turn on "Receive Transparent" option. 4. Apply material to vertical plane and set any kind of alpha map to it. You can use .png file with alpha or simple grayscale bitmap. 5. Render your scene. - In 2.77a shadows will be placed as expected - In latest 2.77 shadows will be turned upside-down. Notice that in my example text is flipped in addition to being upside-down - Image Mapping -> Repeat and Checker produce upside-down shadow. Using Crop Minimum/Maximum produce wrong shadow - Image Mapping -> Clip and Clip Cube produce no shadow - Image Mapping -> Extend produce wrong shadow
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst
Alex changed title from Particles with transparency texture cast upside-down shadows in BI to Objects with alpha maps cast wrong ray shadows in BI 2016-07-09 11:34:24 +02:00

This issue was referenced by 51b274a6be

This issue was referenced by 51b274a6be5d59c7009fd3f439821d1e15b72709

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48818
No description provided.