Fix T48818: Objects with alpha maps cast wrong ray shadows in BI